--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.6.2",
     "gsap": "^1.20.4",
     "node-sass": "^4.7.2",
