--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.2",
+    "pg-promise": "^8.2.2"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0",
