--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,10 +1,13 @@
 .DS_Store
 node_modules/
 /dist/
+/build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
+
+*.env
 
 # Editor directories and files
 .idea
