--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
