--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.6.2",
+    "graceful-fs": "^4.1.11",
     "gsap": "^1.20.4",
     "make": "^0.8.1",
     "node-sass": "^4.9.0",
